# SistemaMedico

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ESTADO_PROYECTO.md  ESTRUCTURA_PROYECTO.md  GUIA_RECORDATORIOS.md  README.md  RESUMEN_FINAL.md  SECURITY.md  SETUP_NOTIFICACIONES.md  SISTEMA_RECORDATORIOS_IMPLEMENTADO.md  START.md  arquitecturaBD.md  docker-compose.yml  install.sh  run_all.bat  traefik-dynamic.yml
Backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  INICIO_RAPIDO.md  README.md  README_RECORDATORIOS.md  alembic.ini  docker-compose.yml  gunicorn_conf.py  locustfile.py  pyproject.toml  requirements-base.txt  requirements-calendar.txt  requirements-data.txt  requirements-dev.txt  requirements-reminders.txt  run_reminders_cron.py  run_tests.bat  test_db_connection.py  test_db_connection_v2.py  traefik.yml
Backend/alembic/: env.py
Backend/auth_service/: Dockerfile  Dockerfile.dev  README.md  app.py  models.py  requirements.txt  routes.py
Backend/auth_service/tests/: test_auth.py
Backend/backend/: install.bat  run_all.sh
Backend/backend/auth_service/: models.py
Backend/backend/citas_service/: routes.py
Backend/backend/docs/: FACTURACION_ELECTRONICA.md
Backend/backend/facturacion_service/: __init__.py  electronic_invoice_models.py  electronic_invoice_routes.py  sri_production.py
Backend/backend/historia_clinica_service/: app.py  routes.py
Backend/backend/inventario_service/: app.py
Backend/citas_service/: Dockerfile  README.md  app.py  models.py  requirements.txt  routes.py
Backend/common/: auth_middleware.py  caching.py  compression.py  config.py  database.py  email_service.py  google_calendar.py  metrics.py  notification_service.py  rate_limiting.py  reminder_manager.py  security_headers.py  whatsapp_service.py
Backend/docs/: QUICK_START_FACTURACION_ELECTRONICA.md  README.md  RESUMEN_FACTURACION_ELECTRONICA.md  SERVICIOS_ACTIVOS.md
Backend/facturacion_service/: Dockerfile  README.md  app.py  electronic_invoice_routes.py  models.py  requirements.txt  routes.py  sri_electronic_invoice.py  xml_storage.py
Backend/historia_clinica_service/: Dockerfile  README.md  app.py  models.py  requirements.txt  routes.py
Backend/inventario_service/: Dockerfile  README.md  app.py  requirements.txt  routes.py
Backend/keys/: jwt_public.pem
Backend/logs_service/: Dockerfile  README.md  __init__.py  app.py  requirements.txt  routes.py
Backend/notifications_service/: Dockerfile  Dockerfile.dev  app.py  requirements.txt  routes.py
Backend/scripts/: add_google_calendar_fields.sql  add_reminder_settings.sql  benchmark_bcrypt.py  create_indexes.sql  execute_sql.py  generate_rsa_keys.py  init_database.sql  migrate_schema.py  populate_data.sql  populate_realistic_data.py  populate_realistic_data_v2.py  reset_database.py  run_calendar_migration.py  run_reminder_migration.py  schema_optimized.sql  test_integration.py
(+135 files in other folders)
